[feat] Setup Markdown Contents

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@nuxt/content": "^1.14.0",
     "nuxt": "^2.15.7"
   },
   "scripts": {
