--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": true,
   "dependencies": {
     "@nuxt/content": "^1.14.0",
+    "bootstrap": "^5.0.2",
     "nuxt": "^2.15.7"
   },
   "scripts": {
@@ -16,5 +17,9 @@
     "build": "nuxt build",
     "generate": "nuxt generate",
     "start": "nuxt start"
+  },
+  "devDependencies": {
+    "sass": "^1.35.1",
+    "sass-loader": "10"
   }
 }
