--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "start": "nuxt start"
   },
   "devDependencies": {
+    "@nuxtjs/color-mode": "^2.0.10",
     "sass": "^1.35.1",
     "sass-loader": "10"
   }
