--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "start": "nuxt start"
   },
   "devDependencies": {
+    "@nuxt/types": "^2.15.8",
+    "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/color-mode": "^2.0.10",
     "sass": "^1.35.1",
     "sass-loader": "10"
