--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,6 @@
 {
+  "include": ["./components/**/*", "./layouts/**/*", "./pages/**/*"],
+  "exclude": ["./node_modules/**/*"],
   "compilerOptions": {
     "target": "ES2018",
     "module": "ESNext",
@@ -10,7 +12,10 @@
     "strict": true,
     "noEmit": true,
     "baseUrl": ".",
-    "types": ["@types/node", "@nuxt/types"]
-  },
-  "exclude": ["node_modules"]
+    "paths": {
+      "~/*": ["./*"],
+      "@/*": ["./*"]
+    },
+    "types": ["@types/node", "@nuxt/types", "@nuxtjs/color-mode"]
+  }
 }
