--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,4 @@
 {
-  "include": ["./components/**/*", "./layouts/**/*", "./pages/**/*"],
-  "exclude": ["./node_modules/**/*"],
   "compilerOptions": {
     "target": "ES2018",
     "module": "ESNext",
@@ -16,6 +14,13 @@
       "~/*": ["./*"],
       "@/*": ["./*"]
     },
-    "types": ["@types/node", "@nuxt/types", "@nuxtjs/color-mode"]
-  }
+    "types": [
+      "@types/node",
+      "@nuxt/types",
+      "@nuxt/content",
+      "@nuxtjs/color-mode"
+    ]
+  },
+  "include": ["./components/**/*", "./layouts/**/*", "./pages/**/*"],
+  "exclude": ["./node_modules/**/*"]
 }
