[feat] Adopt TypeScript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,10 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["./*"],
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "components/*": ["components/*"],
+      "layouts/*": ["layouts/*"],
+      "pages/*": ["pages/*"]
     },
     "types": [
       "@types/node",
