[refactor] Improve TypeScript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
       "@/*": ["./*"],
       "components/*": ["components/*"],
       "layouts/*": ["layouts/*"],
-      "pages/*": ["pages/*"]
+      "pages/*": ["pages/*"],
+      "content/*": ["content/*"]
     },
     "types": [
       "@types/node",
