--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@nuxt/content": "^1.14.0",
-    "bootstrap": "^5.0.2",
-    "nuxt": "^2.15.7"
+    "@nuxt/content": "^1.15.1",
+    "bootstrap": "^5.1.3",
+    "nuxt": "^2.15.8"
   },
   "scripts": {
     "dev": "nuxt",
@@ -19,8 +19,10 @@
     "start": "nuxt start"
   },
   "devDependencies": {
-    "@nuxtjs/color-mode": "^2.0.10",
-    "sass": "^1.35.1",
+    "@nuxt/types": "^2.15.8",
+    "@nuxt/typescript-build": "^2.1.0",
+    "@nuxtjs/color-mode": "^2.1.1",
+    "sass": "^1.45.0",
     "sass-loader": "10"
   }
 }
