--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "start": "nuxt start"
   },
   "devDependencies": {
+    "@nuxt/postcss8": "^1.1.3",
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/color-mode": "^2.1.1",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.6",
     "sass": "^1.45.0",
-    "sass-loader": "10"
+    "sass-loader": "10",
+    "tailwindcss": "^3.0.19"
   }
 }
