--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/color-mode": "^2.1.1",
+    "@nuxtjs/tailwindcss": "^5.0.0-4",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.6",
     "sass": "^1.45.0",
