--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": true,
   "dependencies": {
     "@nuxt/content": "^1.15.1",
+    "@nuxtjs/i18n": "^7.2.0",
     "bootstrap": "^5.1.3",
     "nuxt": "^2.15.8"
   },
