--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
       "@types/node",
       "@nuxt/types",
       "@nuxt/content",
-      "@nuxtjs/color-mode"
+      "@nuxtjs/color-mode",
+      "@nuxtjs/i18n"
     ]
   },
   "include": [
