--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": true,
   "dependencies": {
     "@nuxt/content": "^1.15.1",
+    "@nuxtjs/i18n": "^7.2.0",
     "bootstrap": "^5.1.3",
     "nuxt": "^2.15.8"
   },
@@ -23,6 +24,7 @@
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/color-mode": "^2.1.1",
+    "@nuxtjs/tailwindcss": "^5.0.0-4",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.6",
     "sass": "^1.45.0",
