[chore] Use nuxt dev

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "nuxt": "^2.15.8"
   },
   "scripts": {
-    "dev": "nuxt",
+    "dev": "nuxt dev",
     "build": "nuxt build",
     "generate": "nuxt generate",
     "start": "nuxt start"
