--- a/package.json
+++ b/package.json
@@ -8,27 +8,14 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@nuxt/content": "^1.15.1",
-    "@nuxtjs/i18n": "^7.2.0",
-    "bootstrap": "^5.1.3",
-    "nuxt": "^2.15.8"
+    "@nuxt/content": "^2.2.2",
+    "@nuxtjs/i18n": "8.0.0-beta.4",
+    "nuxt": "^3.0.0"
   },
   "scripts": {
     "dev": "nuxt dev",
     "build": "nuxt build",
     "generate": "nuxt generate",
     "start": "nuxt start"
-  },
-  "devDependencies": {
-    "@nuxt/postcss8": "^1.1.3",
-    "@nuxt/types": "^2.15.8",
-    "@nuxt/typescript-build": "^2.1.0",
-    "@nuxtjs/color-mode": "^2.1.1",
-    "@nuxtjs/tailwindcss": "^5.0.0-4",
-    "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.6",
-    "sass": "^1.45.0",
-    "sass-loader": "10",
-    "tailwindcss": "^3.0.19"
   }
 }
