--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "start": "nuxt start"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.1.3"
+    "@nuxtjs/tailwindcss": "^6.1.3",
+    "sass": "^1.61.0",
+    "sass-loader": "^13.2.2"
   }
 }
