--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "private": true,
   "dependencies": {
     "@nuxt/content": "^2.2.2",
-    "@nuxtjs/i18n": "8.0.0-beta.4",
     "nuxt": "^3.0.0"
   },
   "scripts": {
@@ -23,6 +22,7 @@
     "sass": "^1.61.0",
     "sass-loader": "^13.2.2",
     "typescript": "^5.0.4",
+    "update-browserslist-db": "^1.0.13",
     "vue-tsc": "^1.6.3"
   }
 }
